--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,75 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Node modules
+node_modules/
+# Dependency directories
+jspm_packages/
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn v1
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Angular build
+dist/
+out-tsc/
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Mac system files
+.DS_Store
+
+# Miscellaneous
+*.bak
+*.swp
+
+# Compiled source
+*.d.ts
+*.js
+*.js.map
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Angular specific
+.angular/
+
+# Angular CLI
+.angular/cache/
+
+# Private JetBrains config folder
+.idea/
+
+# Stylelint cache
+.stylelintcache
+
+
 # User-specific files
 *.rsuser
 *.suo
