changed path for route

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "routes.json"
+              "src/routes.json"
             ],
             "styles": [
               "src/styles.scss"
@@ -96,7 +96,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "routes.json"
+              "src/routes.json"
             ],
             "styles": [
               "src/styles.scss"
